{{$NEXT}}
    - Add new options to sub 'normalize-string':
      + ''
      + ''
    - Add new option to sub 'strip-comment':
      + 'first':
         - requires the comment character to be the
           first non-whitespace character on the line,
           otherwise, no comment is defined

3.4.1  2024-04-23T08:20:00-05:00
    - Add new option to sub 'strip-comment':
      + 'normalize-all': 
          - normalizes the returned string
          - also normalizes the returned comment when
              the 'save-comment' option is True
    - Added test for new option

3.4.0  2024-04-09T14:57:37-05:00
    - Ensure the returned comment has all text from the comment
        character to the end of that line
    - Add new test and modify existing tests as required
    - Add alias named arg to sub strip-comment:
      + :mark(:$comment-char) <= new alias '$comment-char'
    - Tweak docs

3.3.3  2024-03-31T14:15:26-05:00
    - Upgrade Github workflows actions to @v4
    - Add missing .yml suffix to workflow files in dist.ini

3.3.2  2024-03-31T07:22:30-05:00
    - Change Github workflows to three-OS tests
    - Use KMP-Matcher from module module AlgorithmsIT in sub 'count-substrings'
    - Rearrange order of sub descriptions in the README
    - Add sub sort-list (from module Abbreviations)
      + add tests
    - Improve sub 'wrap-text' to use FontFactory
    - Use better returns at sub end (eliminate explicit 'return')
    - Use latest Font::AFM (ver 1.24.10)
    - Improve documentation
    - Add test for normalizing newlines and tabs in strings
    - Removed deprecated code (sub write-paragraph)

3.3.1  2023-01-04T11:25:21-06:00
    - Make 'normalize-string' and 'normalize-text' separate routines

3.3.0  2022-10-27T07:37:56-05:00
    - Correctly handle real numbers to preserve two decimal places
      since 'commify' as a default
    - Add option to specify number of decimal places to be shown

3.2.0  2022-09-17T18:27:09-05:00
    - Correct workflow/test.yml